WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186374
[CoordGraphics] Fix compilation errors around USE(COORDINATED_GRAPHICS)
https://bugs.webkit.org/show_bug.cgi?id=186374
Summary
[CoordGraphics] Fix compilation errors around USE(COORDINATED_GRAPHICS)
Don Olmstead
Reported
2018-06-06 17:54:38 PDT
There are a few cases around PLATFORM, USE and ENABLE that prevent compilation of a platform wanting to enable CoordinatedGraphics. Encountered these while seeing what needed to be done to get WinCairo using CoordinatedGraphics.
Attachments
Patch
(11.51 KB, patch)
2018-06-06 17:56 PDT
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2018-06-06 17:56:32 PDT
Created
attachment 342100
[details]
Patch
EWS Watchlist
Comment 2
2018-06-06 17:59:25 PDT
Attachment 342100
[details]
did not pass style-queue: ERROR: Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp:273: Line contains only semicolon. If this should be an empty statement, use { } instead. [whitespace/semicolon] [5] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2018-06-07 11:36:53 PDT
Comment on
attachment 342100
[details]
Patch Clearing flags on attachment: 342100 Committed
r232590
: <
https://trac.webkit.org/changeset/232590
>
WebKit Commit Bot
Comment 4
2018-06-07 11:36:54 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-06-07 11:37:19 PDT
<
rdar://problem/40903814
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug