[CoordGraphics] Fix compilation errors around USE(COORDINATED_GRAPHICS) https://bugs.webkit.org/show_bug.cgi?id=186374

Reviewed by Žan Doberšek.

Source/WebCore:

No new tests. No change in behavior.

* page/scrolling/AsyncScrollingCoordinator.cpp:
(WebCore::AsyncScrollingCoordinator::reconcileScrollingState):
(WebCore::AsyncScrollingCoordinator::reconcileViewportConstrainedLayerPositions):
* page/scrolling/coordinatedgraphics/ScrollingCoordinatorCoordinatedGraphics.cpp:
* page/scrolling/coordinatedgraphics/ScrollingTreeFixedNode.cpp:
* page/scrolling/coordinatedgraphics/ScrollingTreeStickyNode.cpp:
* platform/PlatformWheelEvent.h:
* platform/graphics/nicosia/NicosiaPaintingEngineThreaded.cpp:
* platform/graphics/nicosia/NicosiaPaintingEngineThreaded.h:
* platform/graphics/texmap/TextureMapperPlatformLayerBuffer.cpp:
* platform/graphics/texmap/TextureMapperPlatformLayerBuffer.h:

Source/WebKit:

* Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp:
(WebKit::ThreadedCompositor::sceneUpdateFinished):


Canonical link: https://commits.webkit.org/201763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232590 268f45cc-cd09-0410-ab3c-d52691b4dbfc