Source/WebCore/page/scrolling/coordinatedgraphics/ScrollingTreeFixedNode.cpp
@@ -30,6 +30,8 @@
 
 #if ENABLE(ASYNC_SCROLLING) && USE(COORDINATED_GRAPHICS)
 
+#include "ScrollingTree.h"
+
 namespace WebCore {
 
 Ref<ScrollingTreeFixedNode> ScrollingTreeFixedNode::create(ScrollingTree& scrollingTree, ScrollingNodeID nodeID)
